# DivineWhispers

./: API_GAP_ANALYSIS_REPORT.md  CLAUDE.md  DATA_SYNC_GUIDE.md  DEPLOYMENT_CHECKLIST.md  EMAIL_SETUP.md  FRONTEND_BACKEND_INTEGRATION_SPEC_UPDATED.md  FRONTEND_DEPLOYMENT.md  FRONTEND_STATUS_I18N_FIX.md  SUMMARY.md  debug_fortune_conversation.py  divine-whispers-mockup.html  pending_faq.db  render.yaml  test_poem_service.py
.claude/: settings.local.json
Backend/: .env.example  .env.production  .env.production.template  ALEMBIC_SETUP.md  BACKEND_HANGING_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DivineWhispersBackendDesign.md  Dockerfile  FORTUNE_INTEGRATION.md  HybridPoemSystem.md  I18N_PLAYWRIGHT_TEST_SUMMARY.md  I18N_SSE_IMPLEMENTATION.md  LLM_STREAMING_IMPLEMENTATION.md  LOCAL_TESTING_GUIDE.md  LOG_FILTERING_GUIDE.md  Makefile  OPTIMIZATIONS_IMPLEMENTED.md  PERFORMANCE_ANALYSIS_ACTUAL_DATA.md  PoemChromaSystem.py  RBAC_USAGE_GUIDE.md  README.md  README_FASTAPI.md  REAL_TIME_PROGRESS_EXAMPLE.md  SECURITY_SETUP.md  STREAMING_FIX.md  TRUE_REALTIME_STREAMING_SOLUTION.md  UV_SETUP_GUIDE.md  WALLET_TRANSACTION_SYSTEM_ANALYSIS.md  WORKER_TIMEOUT_FIX.md  add_payment_method_column.py  alembic.ini  build.sh  check_chat_sessions.py  check_completed_tasks.py  check_faq.py  check_schema.py  check_tables.py  check_transactions_schema.py  debug_chroma_query.py  (+41 more)
Backend/alembic/: env.py  script.py.mako
Backend/alembic/versions/: 483518652002_initial_migration_with_all_tables.py  7d71d4f4f4fb_initial_migration_with_all_tables.py  add_fortune_jobs_table.py
Backend/app/: __init__.py  main.py
Backend/app/api/v1/: __init__.py  admin.py  async_chat.py  auth.py  chat.py  contact.py  deities.py  fortune.py  monitoring.py  streaming_chat.py  wallet.py  webhooks.py
Backend/app/constants/: task_status_codes.py
Backend/app/core/: config.py  database.py  permissions.py  security.py
Backend/app/i18n/: __init__.py  sse_messages.py
Backend/app/models/: __init__.py  audit_log.py  base.py  chat_message.py  chat_task.py  email_verification.py  faq.py  fortune_job.py  job.py  job_result.py  token_blacklist.py  transaction.py  user.py  wallet.py
Backend/app/schemas/: auth.py  chat.py  deity.py  faq.py  fortune.py  rbac.py  wallet.py
Backend/app/services/: auth_service.py  chat_service.py  deity_service.py  email_service.py  job_processor.py  payment_service.py  poem_service.py  rbac_service.py  task_queue_service.py  task_worker_pool.py  transaction_service.py  wallet_service.py
Backend/app/services/payment_strategies/: __init__.py  base.py  stripe_strategy.py  tappay_strategy.py
Backend/app/utils/: deps.py  financial.py  logging_config.py  poem_utils.py  progress_tracker.py  rbac.py  streaming_processor.py  timeout_utils.py  websocket.py
Backend/chroma_db/: chroma.sqlite3
Backend/chroma_db/2a1c56fb-e955-4c5d-ac39-9e3bc940e89a/: index_metadata.pickle
Backend/chroma_db/700318fb-4103-4520-8792-254cce767f05/: index_metadata.pickle
Backend/chroma_db/7f40fc3b-fbad-4d13-b89f-296b0ee20d59/: index_metadata.pickle
Backend/chroma_db/9babeb6e-9e71-46a4-a702-aaace8ee9502/: index_metadata.pickle
Backend/chroma_db/b0348930-1f85-443b-82df-ef53c8cf1315/: index_metadata.pickle
Backend/chroma_db/c1b94a30-c825-4197-b814-fa9832d364cc/: index_metadata.pickle
Backend/chroma_db/da49b13e-aead-4d8f-8bcc-766d0b5822f9/: index_metadata.pickle
Backend/chroma_db/dc4adebe-f566-4758-9f90-6fdedc200f56/: index_metadata.pickle
Backend/chroma_db_backup/4e17e489-c57f-4922-9591-58dd2fc2a11a/: index_metadata.pickle
Backend/fortune_module/: OPENAI_STRUCTURED_OUTPUT.md  __init__.py  config.py  data_ingestion.py  example_openai_usage.py  faq_pipeline.py  interpreter.py  llm_client.py  models.py  requirements.txt  schemas.py  test_system.py  unified_rag.py
Backend/scripts/: dev-setup.bat  dev-setup.sh
Backend/tests/: test_wallet_transactions.py
DesignFiles/: FRD.md  MAILFEATURE.md  Purchase.md
SourceCrawler/: AsakusaCrawler.py  (+12 more)
(+1293 files in other folders)
